2009-01-13  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Adjust check_pubnames_structural to be able to
	validate also .debug_pubtypes.  Do the validation.

2009-01-13  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Rewrite message macros to functions.  This makes it
	possible to rewrite several other macros to functions.

2009-01-12  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Implement validation of .debug_pubnames.

2009-01-12  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Check padding between sections in .debug_aranges.

2009-01-12  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: For DIE references, remember both referrer and
	referree.  Add a new data structure ref_record to support that.
	Add new message category, mc_die_rel_ref.  Rename other DIE
	relationship categories to mc_die_rel_* pattern.

2009-01-12  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Changes in data structures for recording DIEs and CUs.

2009-01-12  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Implement validation of .debug_aranges.

2009-01-11  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c (process_file): Handle absence of .debug_info,
	.debug_abbrev and .debug_str gracefully.

2009-01-11  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: A couple small fixes across the code.
	(check_debug_info_structural): Return bool.
	(check_cu_structural): Likewise.
	(check_addr_record_addr): Likewise.
	(check_die_references): Likewise.

2009-01-10  Roland McGrath  <roland@redhat.com>

	* dwarfcmp.cc (test_writer): New variable.
	(options, parse_opt): Grok -T/--test-writer to set it.
	(main): When set, exercise dwarf_output constructors and comparators.

	* dwarflint.c (options, parse_opt): Replace --no-debug with
	-i/--ignore-missing, to match dwarfcmp.

2009-01-10  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Implement --no-debug: silently accept file, if its
	debug info is not available.
